--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,20 @@ body {
     border-bottom: 1px solid rgb(152, 146, 146);
 }
 
+.my-button-div {
+    margin-left: 40%;
+    margin-top:2rem;
+    
+}
+
+.my-button-div button {
+    background-color: transparent !important;
+    border: 1px solid black !important;
+    padding-left: 3rem !important;
+}
+
+footer div div div span {
+    margin-right: 1rem;
+    font-size: 0.8rem;
+}
+
